--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_ez"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.IPCActivity" />
