--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@mipmap/icon_ez"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
         <activity android:name=".activity.IPCActivity" />
 
         <activity
@@ -51,6 +52,8 @@
             android:configChanges="keyboard|screenSize|orientation" />
 
         <activity android:name=".activity.GankListActivity" />
+
+        <activity android:name=".activity.eventbus.EventBusActivity"/>
 
         <activity
             android:name=".activity.StartLockScreenActivity"
